<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num1"
        android:autofillHints="name"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num2"
        android:autofillHints="name"
        android:inputType="number"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_one" />

    <RadioGroup
        android:id="@+id/rg_calculations_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_two">

        <RadioButton
            android:id="@+id/rb_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_calculations_options" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        />

</androidx.constraintlayout.widget.ConstraintLayout>